# aws-iot-device-sdk-embedded-C

./: CMakeLists.txt
demos/: CMakeLists.txt
demos/http/http_demo_basic_tls/: CMakeLists.txt  http_config.h  http_demo_basic_tls.c
demos/http/http_demo_mixed/: CMakeLists.txt  http_demo_mixed.c
demos/http/http_demo_mixed/include/: openssl_app.h  plaintext_app.h
demos/http/http_demo_mixed/src/: openssl_app.c  plaintext_app.c
demos/http/http_demo_mutual_tls/: CMakeLists.txt  demo_config.h  http_demo_mutual_tls.c
demos/http/http_demo_mutual_tls/certificates/: client.crt  client.key
demos/http/http_demo_plaintext/: CMakeLists.txt  Makefile  config.h  http_demo_plaintext.c
demos/logging-stack/: http_plaintext.c
demos/mqtt/mqtt_demo_multiple_transports/: CMakeLists.txt  demo_config.h  mqtt_demo_multiple_transport.c  transport_config.h
demos/mqtt/mqtt_demo_plaintext/: mqtt_demo_plaintext
libraries/: CMakeLists.txt
libraries/standard/http/cbmc/proofs/HTTPClient_InitializeRequestHeaders/: HTTPClient_InitializeRequestHeaders_harness.c
libraries/standard/http/cbmc/proofs/HTTPClient_Send/: HTTPClient_Send_harness.c
libraries/standard/http/include/: http_client.h
libraries/standard/http/src/: http_client.c
libraries/standard/http/src/private/: http_client_internal.h
libraries/standard/http/test/: Makefile  common.h
libraries/standard/http/utest/: http_send_utest.c  http_utest.c
libraries/standard/mqtt/utest/: CMakeLists.txt  config.h  mqtt_utest.c
platform/: CMakeLists.txt
platform/include/: reconnect.h  transport_interface.h
platform/linux/mbedtls/: network_mbedtls_wrapper.c
platform/posix/transport/: CMakeLists.txt  transportFilePaths.cmake
platform/posix/transport/include/: openssl_posix.h  plaintext_posix.h  sockets_posix.h
platform/posix/transport/src/: openssl_posix.c  plaintext_posix.c  reconnect_posix.c
